new blitzlicht reports

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 
 	{{content-for "head-footer"}}
 
-	<script src='https://www.google.com/recaptcha/api.js'></script>
+	<!--script src='https://www.google.com/recaptcha/api.js'></script-->
 </head>
 <body>
 {{content-for "body"}}
